// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Training Page render correctly 1`] = `
<div>
  <div>
    <div
      class="appContainer"
    >
      <div
        class="sidebar"
      >
        <div
          class="logoContainer"
        >
          <svg
            class="logo"
            style="width: 72px; display: block;"
          />
        </div>
        <nav
          class="sidebarNavigation"
        >
          <a
            class="sidebarLink"
            href="/"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-1 MuiSvgIcon-colorPrimary-2"
              focusable="false"
              style="font-size: 24px;"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
              />
            </svg>
            Home
          </a>
          <a
            class="sidebarLink"
            href="/training"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-1 MuiSvgIcon-colorPrimary-2"
              focusable="false"
              style="font-size: 24px;"
              viewBox="0 0 24 24"
            >
              <path
                d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z"
              />
            </svg>
            Training
          </a>
          <a
            class="sidebarLink"
            href="/faq"
          >
            <svg
              color="primary"
              style="font-size: 24px;"
            />
            FAQ
          </a>
        </nav>
      </div>
      <div
        class="appMain"
      >
        <div
          class="headerContainer"
        >
          <div
            class="header"
          >
            <div
              class="upperHeader"
            >
              <nav>
                <a
                  href="/contact"
                >
                  Contact
                </a>
                <a
                  data-testid="global-external-link"
                  href="https://www.bmigroup.com/no/"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  BMI Norway Website
                </a>
              </nav>
            </div>
            <div
              class="midHeader"
            >
              <svg
                class="logo"
                style="width: 50px; display: block;"
              />
              <div
                class="midHeaderNav"
              >
                <button
                  aria-label="aria.notifications"
                  class="MuiButtonBase-root-18 MuiIconButton-root-10 notificationsIcon notificationsIcon--unread"
                  id="notifications-panel-toggle"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label-17"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-1 MuiSvgIcon-colorPrimary-2 MuiSvgIcon-fontSizeLarge-9"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.89 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root-398"
                  />
                </button>
                <div
                  class="tabletNavButton"
                >
                  <button
                    aria-label="aria.navigation"
                    class="MuiButtonBase-root-18"
                    id="tablet-navigation-panel-toggle"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-1 MuiSvgIcon-colorPrimary-2 MuiSvgIcon-fontSizeLarge-9"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root-398"
                    />
                  </button>
                </div>
                <div
                  class="mobileNavButton"
                >
                  <button
                    aria-label="aria.navigation"
                    class="MuiButtonBase-root-18"
                    id="mobile-navigation-panel-toggle"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-1 MuiSvgIcon-colorPrimary-2 MuiSvgIcon-fontSizeLarge-9"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root-398"
                    />
                  </button>
                </div>
              </div>
            </div>
            <div
              class="lowerHeader"
            >
              <div
                class="lowerHeaderMeta"
              >
                <h3
                  class="MuiTypography-root-27 Typography-root-19 MuiTypography-h3-34"
                  data-testid="typography"
                >
                  Training
                </h3>
                <hr
                  class="MuiDivider-root-57 lowerHeaderDivider MuiDivider-flexItem-63 MuiDivider-vertical-62"
                />
                <h3
                  class="MuiTypography-root-27 lowerHeaderUserLevel Typography-root-19 MuiTypography-h3-34"
                  data-testid="typography"
                />
              </div>
              <div
                class="lowerHeaderNav"
              >
                <button
                  class="MuiButtonBase-root-18 MuiIconButton-root-10 notificationsIcon notificationsIcon--unread"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label-17"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-1 MuiSvgIcon-colorPrimary-2"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.89 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root-398"
                  />
                </button>
                <div
                  class="makeStyles-root-64"
                >
                  <div>
                    <button
                      aria-haspopup="true"
                      class="MuiButtonBase-root-18 MuiButton-root-66 MuiButton-text-68"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label-67"
                      >
                        <div
                          class="userMenu"
                        >
                          <div
                            class="avatar"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root-1"
                              focusable="false"
                              style="width: 20px; color: rgb(238, 238, 238);"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                              />
                            </svg>
                          </div>
                          <div
                            class="userName"
                          >
                            Account
                          </div>
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root-1 MuiSvgIcon-colorAction-4"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                            />
                          </svg>
                        </div>
                      </span>
                      <span
                        class="MuiTouchRipple-root-398"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="appContent"
        >
          <div
            class="sidePanelWrapper"
          >
            <div
              class="main"
            >
              <div
                class="sidePanel"
              >
                <div
                  class="filters"
                >
                  <nav>
                    <div
                      class="MuiFormControl-root-110 MuiTextField-root-109 TextField-root-106 TextField-leftAdornment-107 MuiFormControl-fullWidth-113"
                    >
                      <label
                        class="MuiFormLabel-root-122 MuiInputLabel-root-114 MuiInputLabel-formControl-116 MuiInputLabel-animated-119 MuiInputLabel-outlined-121"
                        data-shrink="false"
                        for="filter"
                        id="filter-label"
                      >
                        search.inputLabel
                      </label>
                      <div
                        class="MuiInputBase-root-138 MuiOutlinedInput-root-126 MuiInputBase-fullWidth-145 MuiInputBase-formControl-139 MuiInputBase-adornedEnd-141 MuiOutlinedInput-adornedEnd-129"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input-146 MuiOutlinedInput-input-133 MuiInputBase-inputAdornedEnd-151 MuiOutlinedInput-inputAdornedEnd-137"
                          id="filter"
                          name="filter"
                          type="text"
                          value=""
                        />
                        <div
                          class="MuiInputAdornment-root-153 MuiInputAdornment-positionEnd-156"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root-1"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                            />
                          </svg>
                        </div>
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-160 MuiOutlinedInput-notchedOutline-132"
                        >
                          <legend
                            class="PrivateNotchedOutline-legendLabelled-162"
                          >
                            <span>
                              search.inputLabel
                            </span>
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                  </nav>
                  <div
                    class="filterButtons"
                  >
                    <span>
                      Show me
                      :
                    </span>
                    <div
                      class="filterButton"
                    >
                      <div
                        class="MuiButtonBase-root-18 MuiChip-root-167 Chip-root-164 MuiChip-colorPrimary-169 MuiChip-clickableColorPrimary-172 MuiChip-clickable-171"
                        role="button"
                        tabindex="0"
                      >
                        <span
                          class="MuiChip-label-188"
                        >
                          filter.labels.all
                        </span>
                        <span
                          class="MuiTouchRipple-root-398"
                        />
                      </div>
                    </div>
                    <div
                      class="filterButton"
                    >
                      <div
                        class="MuiButtonBase-root-18 MuiChip-root-167 Chip-root-164 Chip-default-165 MuiChip-clickable-171"
                        role="button"
                        tabindex="0"
                      >
                        <span
                          class="MuiChip-label-188"
                        >
                          certifications.flat
                        </span>
                        <span
                          class="MuiTouchRipple-root-398"
                        />
                      </div>
                    </div>
                    <div
                      class="filterButton"
                    >
                      <div
                        class="MuiButtonBase-root-18 MuiChip-root-167 Chip-root-164 Chip-default-165 MuiChip-clickable-171"
                        role="button"
                        tabindex="0"
                      >
                        <span
                          class="MuiChip-label-188"
                        >
                          certifications.pitched
                        </span>
                        <span
                          class="MuiTouchRipple-root-398"
                        />
                      </div>
                    </div>
                    <div
                      class="filterButton"
                    >
                      <div
                        class="MuiButtonBase-root-18 MuiChip-root-167 Chip-root-164 Chip-default-165 MuiChip-clickable-171"
                        role="button"
                        tabindex="0"
                      >
                        <span
                          class="MuiChip-label-188"
                        >
                          certifications.other
                        </span>
                        <span
                          class="MuiTouchRipple-root-398"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="results"
                >
                  <div
                    data-testid="filterResult"
                  >
                    <button
                      class="MuiButtonBase-root-18 MuiCardActionArea-root-196"
                      tabindex="0"
                      type="button"
                    >
                      <div
                        class="MuiCardContent-root-198 main"
                      >
                        <h6
                          class="MuiTypography-root-27 title Typography-root-19 MuiTypography-h6-37"
                          data-testid="typography"
                        >
                          Flat Course
                        </h6>
                        <div>
                          <p
                            class="MuiTypography-root-27 Typography-root-19 MuiTypography-body1-29"
                            data-testid="typography"
                            style="text-transform: capitalize;"
                          >
                            type.undefined
                          </p>
                          <p
                            class="MuiTypography-root-27 icon Typography-root-19 MuiTypography-body1-29"
                            data-testid="typography"
                          >
                            <svg
                              class="technologyIcon"
                            />
                            enrolled
                          </p>
                        </div>
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root-1 chevron MuiSvgIcon-colorDisabled-6"
                          focusable="false"
                          style="font-size: 36px;"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                          />
                        </svg>
                      </div>
                      <span
                        class="MuiCardActionArea-focusHighlight-197"
                      />
                      <span
                        class="MuiTouchRipple-root-398"
                      />
                    </button>
                  </div>
                  <div
                    data-testid="filterResult"
                  >
                    <button
                      class="MuiButtonBase-root-18 MuiCardActionArea-root-196"
                      tabindex="0"
                      type="button"
                    >
                      <div
                        class="MuiCardContent-root-198 main"
                      >
                        <h6
                          class="MuiTypography-root-27 title Typography-root-19 MuiTypography-h6-37"
                          data-testid="typography"
                        >
                          Other Course
                        </h6>
                        <div>
                          <p
                            class="MuiTypography-root-27 Typography-root-19 MuiTypography-body1-29"
                            data-testid="typography"
                            style="text-transform: capitalize;"
                          >
                            type.undefined
                          </p>
                          <p
                            class="MuiTypography-root-27 icon Typography-root-19 MuiTypography-body1-29"
                            data-testid="typography"
                          >
                            <svg
                              class="technologyIcon"
                            />
                            enrolled
                          </p>
                        </div>
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root-1 chevron MuiSvgIcon-colorDisabled-6"
                          focusable="false"
                          style="font-size: 36px;"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                          />
                        </svg>
                      </div>
                      <span
                        class="MuiCardActionArea-focusHighlight-197"
                      />
                      <span
                        class="MuiTouchRipple-root-398"
                      />
                    </button>
                  </div>
                  <div
                    data-testid="filterResult"
                  >
                    <button
                      class="MuiButtonBase-root-18 MuiCardActionArea-root-196"
                      tabindex="0"
                      type="button"
                    >
                      <div
                        class="MuiCardContent-root-198 main"
                      >
                        <h6
                          class="MuiTypography-root-27 title Typography-root-19 MuiTypography-h6-37"
                          data-testid="typography"
                        >
                          Pitch Course
                        </h6>
                        <div>
                          <p
                            class="MuiTypography-root-27 Typography-root-19 MuiTypography-body1-29"
                            data-testid="typography"
                            style="text-transform: capitalize;"
                          >
                            type.undefined
                          </p>
                          <p
                            class="MuiTypography-root-27 icon Typography-root-19 MuiTypography-body1-29"
                            data-testid="typography"
                          >
                            enrolled
                          </p>
                        </div>
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root-1 chevron MuiSvgIcon-colorDisabled-6"
                          focusable="false"
                          style="font-size: 36px;"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                          />
                        </svg>
                      </div>
                      <span
                        class="MuiCardActionArea-focusHighlight-197"
                      />
                      <span
                        class="MuiTouchRipple-root-398"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root-201 outerGrid MuiGrid-container-202 MuiGrid-spacing-xs-2-225"
            >
              <div
                class="MuiGrid-root-201 Grid-item-199 MuiGrid-item-203"
              >
                <div
                  class="Hero-root-304 Hero-lvl1-320 Hero--lvl-1"
                >
                  <div
                    class="Container-root-323"
                  >
                    <div
                      class="MuiContainer-root-325 Hero-container-309 MuiContainer-maxWidthXl-332"
                    >
                      <div
                        class="Hero-wrapper-310"
                      >
                        <div
                          class="Hero-content-311"
                        >
                          <h1
                            class="MuiTypography-root-27 Hero-title-312 Typography-root-19 Typography-underline-21 Typography-darkBg-22 MuiTypography-h1-32"
                            data-testid="typography"
                          >
                            pageHeading
                          </h1>
                          <div
                            class="Hero-text-313"
                          >
                            description
                          </div>
                          <a
                            aria-disabled="false"
                            class="MuiButtonBase-root-18 MuiButton-root-66 Button-root-333 MuiButton-outlined-71 Button-outlinedDarkBg-339 Hero-cta-314 MuiButton-outlinedPrimary-72"
                            href="/api/docebo-sso"
                            label="lmsCtaLabel"
                            rel="noopener noreferrer"
                            tabindex="0"
                            target="_blank"
                          >
                            <span
                              class="MuiButton-label-67 Button-label-336"
                            >
                              lmsCtaLabel
                            </span>
                            <span
                              class="MuiTouchRipple-root-398"
                            />
                          </a>
                        </div>
                      </div>
                    </div>
                  </div>
                  <img
                    class="Hero-image-318 Media-root-353"
                    src="url"
                  />
                </div>
                <div
                  class="MuiPaper-root-356 MuiCard-root-355 card MuiPaper-elevation1-360 MuiPaper-rounded-357"
                  style="margin-top: 1.5rem;"
                >
                  <div
                    class="MuiCardContent-root-198"
                  >
                    <h4
                      class="MuiTypography-root-27 Typography-root-19 Typography-underline-21 MuiTypography-h4-35"
                      data-testid="typography"
                    >
                      pageSubHeading
                    </h4>
                    <div
                      class="body"
                    >
                      <div
                        class="subcontent"
                      >
                        <div
                          class="heading"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root-1"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                            />
                          </svg>
                          <h5
                            class="MuiTypography-root-27 Typography-root-19 MuiTypography-h5-36"
                            data-testid="typography"
                          >
                            step1Heading
                          </h5>
                        </div>
                        <div
                          style="margin-bottom: 1.5rem;"
                        >
                          <h6
                            class="MuiTypography-root-27 Typography-root-19 MuiTypography-h6-37"
                            data-testid="typography"
                          >
                            step1SubHeading
                          </h6>
                          <div
                            class="MuiTypography-root-27 Typography-root-19 MuiTypography-body1-29"
                            data-testid="typography"
                          >
                            step1Description
                          </div>
                        </div>
                      </div>
                      <div
                        class="subcontent"
                      >
                        <div
                          class="heading"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root-1"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z"
                            />
                          </svg>
                          <h5
                            class="MuiTypography-root-27 Typography-root-19 MuiTypography-h5-36"
                            data-testid="typography"
                          >
                            step2Heading
                          </h5>
                        </div>
                        <div
                          style="margin-bottom: 1.5rem;"
                        >
                          <h6
                            class="MuiTypography-root-27 Typography-root-19 MuiTypography-h6-37"
                            data-testid="typography"
                          >
                            step2SubHeading
                          </h6>
                          <div
                            class="MuiTypography-root-27 Typography-root-19 MuiTypography-body1-29"
                            data-testid="typography"
                          >
                            step2Description
                          </div>
                        </div>
                      </div>
                      <div
                        class="subcontent"
                      >
                        <div
                          class="heading"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root-1"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
                            />
                          </svg>
                          <h5
                            class="MuiTypography-root-27 Typography-root-19 MuiTypography-h5-36"
                            data-testid="typography"
                          >
                            step3Heading
                          </h5>
                        </div>
                        <div
                          style="margin-bottom: 1.5rem;"
                        >
                          <h6
                            class="MuiTypography-root-27 Typography-root-19 MuiTypography-h6-37"
                            data-testid="typography"
                          >
                            step3SubHeading
                          </h6>
                          <div
                            class="MuiTypography-root-27 Typography-root-19 MuiTypography-body1-29"
                            data-testid="typography"
                          >
                            step3Description
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="footer"
        >
          <svg
            style="width: 50px;"
          />
          <nav
            class="footerNav"
          >
            <a
              href="/footer/link/relativePath"
            >
              Footer link title
            </a>
          </nav>
          <svg
            style="width: 120px;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Training Page render correctly when error in trainingData 1`] = `
<div>
  <div>
    <div
      class="appContainer"
    >
      <div
        class="sidebar"
      >
        <div
          class="logoContainer"
        >
          <svg
            class="logo"
            style="width: 72px; display: block;"
          />
        </div>
        <nav
          class="sidebarNavigation"
        >
          <a
            class="sidebarLink"
            href="/"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-536 MuiSvgIcon-colorPrimary-537"
              focusable="false"
              style="font-size: 24px;"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
              />
            </svg>
            Home
          </a>
          <a
            class="sidebarLink"
            href="/training"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-536 MuiSvgIcon-colorPrimary-537"
              focusable="false"
              style="font-size: 24px;"
              viewBox="0 0 24 24"
            >
              <path
                d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z"
              />
            </svg>
            Training
          </a>
          <a
            class="sidebarLink"
            href="/faq"
          >
            <svg
              color="primary"
              style="font-size: 24px;"
            />
            FAQ
          </a>
        </nav>
      </div>
      <div
        class="appMain"
      >
        <div
          class="headerContainer"
        >
          <div
            class="header"
          >
            <div
              class="upperHeader"
            >
              <nav>
                <a
                  href="/contact"
                >
                  Contact
                </a>
                <a
                  data-testid="global-external-link"
                  href="https://www.bmigroup.com/no/"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  BMI Norway Website
                </a>
              </nav>
            </div>
            <div
              class="midHeader"
            >
              <svg
                class="logo"
                style="width: 50px; display: block;"
              />
              <div
                class="midHeaderNav"
              >
                <button
                  aria-label="aria.notifications"
                  class="MuiButtonBase-root-553 MuiIconButton-root-545 notificationsIcon notificationsIcon--unread"
                  id="notifications-panel-toggle"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label-552"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-536 MuiSvgIcon-colorPrimary-537 MuiSvgIcon-fontSizeLarge-544"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.89 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root-654"
                  />
                </button>
                <div
                  class="tabletNavButton"
                >
                  <button
                    aria-label="aria.navigation"
                    class="MuiButtonBase-root-553"
                    id="tablet-navigation-panel-toggle"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-536 MuiSvgIcon-colorPrimary-537 MuiSvgIcon-fontSizeLarge-544"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root-654"
                    />
                  </button>
                </div>
                <div
                  class="mobileNavButton"
                >
                  <button
                    aria-label="aria.navigation"
                    class="MuiButtonBase-root-553"
                    id="mobile-navigation-panel-toggle"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-536 MuiSvgIcon-colorPrimary-537 MuiSvgIcon-fontSizeLarge-544"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root-654"
                    />
                  </button>
                </div>
              </div>
            </div>
            <div
              class="lowerHeader"
            >
              <div
                class="lowerHeaderMeta"
              >
                <h3
                  class="MuiTypography-root-562 Typography-root-554 MuiTypography-h3-569"
                  data-testid="typography"
                >
                  Training
                </h3>
                <hr
                  class="MuiDivider-root-592 lowerHeaderDivider MuiDivider-flexItem-598 MuiDivider-vertical-597"
                />
                <h3
                  class="MuiTypography-root-562 lowerHeaderUserLevel Typography-root-554 MuiTypography-h3-569"
                  data-testid="typography"
                />
              </div>
              <div
                class="lowerHeaderNav"
              >
                <button
                  class="MuiButtonBase-root-553 MuiIconButton-root-545 notificationsIcon notificationsIcon--unread"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label-552"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-536 MuiSvgIcon-colorPrimary-537"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.89 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root-654"
                  />
                </button>
                <div
                  class="makeStyles-root-599"
                >
                  <div>
                    <button
                      aria-haspopup="true"
                      class="MuiButtonBase-root-553 MuiButton-root-601 MuiButton-text-603"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label-602"
                      >
                        <div
                          class="userMenu"
                        >
                          <div
                            class="avatar"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root-536"
                              focusable="false"
                              style="width: 20px; color: rgb(238, 238, 238);"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                              />
                            </svg>
                          </div>
                          <div
                            class="userName"
                          >
                            Account
                          </div>
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root-536 MuiSvgIcon-colorAction-539"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                            />
                          </svg>
                        </div>
                      </span>
                      <span
                        class="MuiTouchRipple-root-654"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="appContent"
        >
          <div>
            Oops... 
            error message
          </div>
        </div>
        <div
          class="footer"
        >
          <svg
            style="width: 50px;"
          />
          <nav
            class="footerNav"
          >
            <a
              href="/footer/link/relativePath"
            >
              Footer link title
            </a>
          </nav>
          <svg
            style="width: 120px;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Training Page render correctly when no items in trainingContentCollection 1`] = `
<div>
  <div>
    <div
      class="appContainer"
    >
      <div
        class="sidebar"
      >
        <div
          class="logoContainer"
        >
          <svg
            class="logo"
            style="width: 72px; display: block;"
          />
        </div>
        <nav
          class="sidebarNavigation"
        >
          <a
            class="sidebarLink"
            href="/"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-408 MuiSvgIcon-colorPrimary-409"
              focusable="false"
              style="font-size: 24px;"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
              />
            </svg>
            Home
          </a>
          <a
            class="sidebarLink"
            href="/training"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-408 MuiSvgIcon-colorPrimary-409"
              focusable="false"
              style="font-size: 24px;"
              viewBox="0 0 24 24"
            >
              <path
                d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z"
              />
            </svg>
            Training
          </a>
          <a
            class="sidebarLink"
            href="/faq"
          >
            <svg
              color="primary"
              style="font-size: 24px;"
            />
            FAQ
          </a>
        </nav>
      </div>
      <div
        class="appMain"
      >
        <div
          class="headerContainer"
        >
          <div
            class="header"
          >
            <div
              class="upperHeader"
            >
              <nav>
                <a
                  href="/contact"
                >
                  Contact
                </a>
                <a
                  data-testid="global-external-link"
                  href="https://www.bmigroup.com/no/"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  BMI Norway Website
                </a>
              </nav>
            </div>
            <div
              class="midHeader"
            >
              <svg
                class="logo"
                style="width: 50px; display: block;"
              />
              <div
                class="midHeaderNav"
              >
                <button
                  aria-label="aria.notifications"
                  class="MuiButtonBase-root-425 MuiIconButton-root-417 notificationsIcon notificationsIcon--unread"
                  id="notifications-panel-toggle"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label-424"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-408 MuiSvgIcon-colorPrimary-409 MuiSvgIcon-fontSizeLarge-416"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.89 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root-526"
                  />
                </button>
                <div
                  class="tabletNavButton"
                >
                  <button
                    aria-label="aria.navigation"
                    class="MuiButtonBase-root-425"
                    id="tablet-navigation-panel-toggle"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-408 MuiSvgIcon-colorPrimary-409 MuiSvgIcon-fontSizeLarge-416"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root-526"
                    />
                  </button>
                </div>
                <div
                  class="mobileNavButton"
                >
                  <button
                    aria-label="aria.navigation"
                    class="MuiButtonBase-root-425"
                    id="mobile-navigation-panel-toggle"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-408 MuiSvgIcon-colorPrimary-409 MuiSvgIcon-fontSizeLarge-416"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root-526"
                    />
                  </button>
                </div>
              </div>
            </div>
            <div
              class="lowerHeader"
            >
              <div
                class="lowerHeaderMeta"
              >
                <h3
                  class="MuiTypography-root-434 Typography-root-426 MuiTypography-h3-441"
                  data-testid="typography"
                >
                  Training
                </h3>
                <hr
                  class="MuiDivider-root-464 lowerHeaderDivider MuiDivider-flexItem-470 MuiDivider-vertical-469"
                />
                <h3
                  class="MuiTypography-root-434 lowerHeaderUserLevel Typography-root-426 MuiTypography-h3-441"
                  data-testid="typography"
                />
              </div>
              <div
                class="lowerHeaderNav"
              >
                <button
                  class="MuiButtonBase-root-425 MuiIconButton-root-417 notificationsIcon notificationsIcon--unread"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label-424"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-408 MuiSvgIcon-colorPrimary-409"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.89 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root-526"
                  />
                </button>
                <div
                  class="makeStyles-root-471"
                >
                  <div>
                    <button
                      aria-haspopup="true"
                      class="MuiButtonBase-root-425 MuiButton-root-473 MuiButton-text-475"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label-474"
                      >
                        <div
                          class="userMenu"
                        >
                          <div
                            class="avatar"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root-408"
                              focusable="false"
                              style="width: 20px; color: rgb(238, 238, 238);"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                              />
                            </svg>
                          </div>
                          <div
                            class="userName"
                          >
                            Account
                          </div>
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root-408 MuiSvgIcon-colorAction-411"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                            />
                          </svg>
                        </div>
                      </span>
                      <span
                        class="MuiTouchRipple-root-526"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="appContent"
        >
          <div />
        </div>
        <div
          class="footer"
        >
          <svg
            style="width: 50px;"
          />
          <nav
            class="footerNav"
          >
            <a
              href="/footer/link/relativePath"
            >
              Footer link title
            </a>
          </nav>
          <svg
            style="width: 120px;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
